# mzio

./: .gitattributes  .gitignore  Cargo.toml  README.md
assets/: demo.ms2  demo.mzML
data/: README.md  make_slim_bruker_dia_fixture.py  regenerate_slim_fixtures.sh
data/exploris480_hela_digest/: README.md  manifest.tsv
data/exploris480_hela_digest/mzml/: 99990_236_EXP_Hela_100ng_200nl_Jan8_scan9065.mzML
data/exploris480_hela_digest/pepxml/: 99990_236_EXP_Hela_100ng_200nl_Jan8_scan9065_top_hits.pep.xml
data/exploris480_phospho_localization/: README.md  manifest.tsv
data/exploris480_phospho_localization/mzml/: 49108_1_EXP_802_PDX_1mg_phos_oneforth_F13_scan4877.mzML
data/exploris480_phospho_localization/pepxml/: 49108_F13_scan4877_phospho_top_hits.pep.xml
data/timstof2_hela_dia_slice/: README.md  manifest.tsv
data/timstof2_hela_dia_slice/bruker_d/: hela_dia_iildlisespik_rt21_60_21_78.d.manifest.json
data/timstof2_hela_dia_slice/bruker_d/hela_dia_iildlisespik_rt21_60_21_78.d/: HyStarMetadata.xml  SampleInfo.xml  analysis.tdf  analysis.tdf_bin
src/: annotate.rs  dia.rs  dia_bruker_bridge.py  diagnostics.rs  ion_table.rs  main.rs  ms2.rs  mzml.rs  pepxml.rs  plot.rs  scale.rs  scan.rs  spectra.rs  survey.rs  svg_canvas.rs
src/spectra/: backend.rs
tests/: dia_slice_cli.rs  diagnostics_cli.rs  plot_cli.rs  plot_survey_cli.rs  scan_cli.rs  spectra_cli.rs
